<resources>
    <string name="app_name">ProbandoOtraForma</string>
    <!-- Login Screen -->
    <string name="labellogin">Información de usuario</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="action_validate">Login</string>
    <string name="message_login_ok">Credenciales Correctas</string>
    <string name="message_login_fail">Credenciales NO Correctas</string>
    <string name="label_remember_username">Recordar Username</string>

</resources>